--- a/haikamu.html
+++ b/haikamu.html
@@ -70,9 +70,9 @@
        </div>
 
        <!-- Konten Isi Kado -->
-       <p id="kado1">Selamat pagi! Maafin aku ya kalau sebelumnya udah bikin kamu marah, Aku Sayang Kamu 😍</p>
-       <p id="kado2">Selamat pagi, <b id="namakamu2"></b>! ✨<br><br>Matahari boleh bersinar terik,<br>tetapi hanya <b id="namakamu3"></b> yang paling<br>menarik, jiakhhh~ 😆<br><br><span class="ftalt">I love youuu ><</span></p>
-       <p id="kado3">Selamat pagi! Jangan lupa bahagia terus ya.. Aku di sini sangat menyayangimu 😍</p>
+       <p id="kado1">Kosong 😆</p>
+       <p id="kado2">Selamat pagi, <b id="namakamu2"></b>! ✨<br><br>Matahari boleh bersinar terik,<br>tetapi hanya <b id="namakamu3"></b> yang paling<br>menarik, jiakhhh~ 😆<br><br><span class="ftalt">😆 ><</span></p>
+       <p id="kado3">Selamat pagi! Jangan lupa bahagia terus ya..  😍</p>
 
      </blockquote></div>
 
