--- a/haikamu.html
+++ b/haikamu.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 
 <head>
-<title>Script HTML Untukmu</title>
+<title>Selamat Sore</title>
 <!-- 
   Made with love by feeldream!
 
@@ -58,7 +58,7 @@
        <!-- Konten Pembukaan -->
        <p id="kalimat">Hai, </p>
        <p id="kalimatb">Aku cuma mau bilang nih,</p>
-       <p id="kalimatb2">Good Morning, <b id="namakamu"></b>! Jangan lupa mandi, sarapan, dan semangat terus jalani harinya! 😍</p>
+       <p id="kalimatb2">Selamat sore, <b id="namakamu"></b>! Jangan lupa mandi, sarapan, dan semangat terus jalani harinya! 😍</p>
        <p id="kalimatc">Gaboleh nyerah kalau<br>ada masalah yaa.. 🥰</p>
 
        <!-- Konten Pilihan Kado -->
@@ -70,7 +70,7 @@
        </div>
 
        <!-- Konten Isi Kado -->
-       <p id="kado1">Kosong 😆</p>
+       <p id="kado1">Semangat terus untuk kamu ✨</p>
        <p id="kado2">Selamat pagi, <b id="namakamu2"></b>! ✨<br><br>Matahari boleh bersinar terik,<br>tetapi hanya <b id="namakamu3"></b> yang paling<br>menarik, jiakhhh~ 😆<br><br><span class="ftalt">😆 ><</span></p>
        <p id="kado3">Selamat pagi! Jangan lupa bahagia terus ya..  😍</p>
 
@@ -84,7 +84,7 @@
      </div>
 
      <!-- Pesan yang dikirim ke WhatsApp -->
-     <span id="pesanWA" class="sembunyi">Awww, Good Morning too! ✨</span>
+     <span id="pesanWA" class="sembunyi">Makasih hehe! ✨</span>
 
    </div>
 
