--- a/haikamu.html
+++ b/haikamu.html
@@ -71,8 +71,8 @@
 
        <!-- Konten Isi Kado -->
        <p id="kado1">Semangat terus untuk kamu ✨</p>
-       <p id="kado2">Selamat pagi, <b id="namakamu2"></b>! ✨<br><br>Matahari boleh bersinar terik,<br>tetapi hanya <b id="namakamu3"></b> yang paling<br>menarik, jiakhhh~ 😆<br><br><span class="ftalt">😆 ><</span></p>
-       <p id="kado3">Selamat pagi! Jangan lupa bahagia terus ya..  😍</p>
+       <p id="kado2">Selamat sore, <b id="namakamu2"></b>! ✨<br><br>Matahari boleh bersinar terik,<br>tetapi hanya <b id="namakamu3"></b> yang paling<br>menarik, jiakhhh~ 😆<br><br><span class="ftalt">😆 ><</span></p>
+       <p id="kado3">Selamat sore! Jangan lupa bahagia terus ya..  😍</p>
 
      </blockquote></div>
 
